--- a/terminalcss.css
+++ b/terminalcss.css
@@ -1,4 +1,6 @@
 body, html {
+  left:0;
+  top:0;
   height:100%;
   position:absolute;
 }
@@ -6,4 +8,6 @@ body, html {
   width:100%;
   height:100%;
   position: absolute;
+  left: 0;
+  top: 0;
 }
