--- a/terminalcss.css
+++ b/terminalcss.css
@@ -3,7 +3,7 @@ body, html {
   margin:0;
   position:relative;
 }
-overlay.screen {
+.overlay.screen {
   width:100%;
   height:100%;
   position: absolute;
