--- a/terminalcss.css
+++ b/terminalcss.css
@@ -2,10 +2,11 @@ body, html {
   height:100%;
   margin:0;
   position:relative;
-  background-color: #4AF626;
+  background-color: #000000;
 }
 
 .actualContent {
+  font-color: #4AF626;
   width:100%;
   height: 100%;
 }
