--- a/terminalcss.css
+++ b/terminalcss.css
@@ -5,8 +5,8 @@ body, html {
   background-color: #000000;
 }
 
-.actualContent {
+/*.actualContent {
   font-color: #4AF626;
   width:100%;
   height: 100%;
-}
+}*/
