--- a/terminalcss.css
+++ b/terminalcss.css
@@ -6,7 +6,9 @@ body, html {
 }
 
 .light {
-  color: #4AF626;
+  color: #47F323;
+  font-size: 20px;
+  font-style: "Lucida Consolef";
   width:100%;
   height: 100%;
 }
