--- a/terminalcss.css
+++ b/terminalcss.css
@@ -8,7 +8,7 @@ body, html {
 .light {
   color: #47F323;
   font-size: 20px;
-  font-style: "Lucida Consolef";
+  font-style: "Ubuntu";
   width:100%;
   height: 100%;
 }
