--- a/terminalcss.css
+++ b/terminalcss.css
@@ -3,15 +3,15 @@ body, html {
   margin:0;
   position:relative;
   background-color: #000000;
-  border-radius: 500px/80px;
 }
 
 .light {
   margin-left: 30px;
   margin-top: 20px;
   color: #47F323;
-  font-size: 20px;
+  font-size: 3em;
   font-style: Ubuntu;
   width:100%;
   height: 100%;
 }
+
