--- a/terminalcss.css
+++ b/terminalcss.css
@@ -9,7 +9,8 @@ body, html {
 .light {
   margin-left: 30px;
   margin-top: 20px;
-  color: #47F323;
+  /*color: #47F323;*/
+  color: #ffffff;
   font-size: 1.75em;
   font-style: Ubuntu;
   width:100%;
