--- a/terminalcss.css
+++ b/terminalcss.css
@@ -16,7 +16,7 @@ div {
   /*color: #47F323;*/
   color: #ffffff;
   font-size: 1.75em;
-  font-style: Ubuntu;
+  font-style: Ubuntu Mono;
 }
 
 .green {
