--- a/terminalcss.css
+++ b/terminalcss.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.google.com/specimen/Ubuntu+Mono');
+@import url(https://fonts.google.com/specimen/Ubuntu+Mono);
 body, html {
   height:100%;
   margin:0;
