--- a/terminalcss.css
+++ b/terminalcss.css
@@ -1,6 +1,7 @@
+/* Credit to https://www.fontsquirrel.com/fonts/list/foundry/dalton-maag-ltd for this amazing font */
 @font-face {
   font-family: 'Ubuntu Mono';
-  src: url('UbuntuMono-R.ttf') format('truetype');
+  src: url('ubuntumono-r-webfont.woff') format('woff');
 }
 
 body, html {
