--- a/terminalcss.css
+++ b/terminalcss.css
@@ -1,6 +1,6 @@
 /* Credit to https://www.fontsquirrel.com/fonts/list/foundry/dalton-maag-ltd for this amazing font */
 @font-face {
-  font-family: 'Ubuntu Mono';
+  font-family: 'ubuntumono';
   src: url('ubuntumono-r-webfont.woff2') format('woff2'),
     url('ubuntumono-r-webfont.woff') format('woff');
 }
@@ -14,7 +14,7 @@ body, html {
 }
 
 #text {
-    font-style: 'Ubuntu Mono';
+    font-style: 'ubuntumono';
 }
 
 div {
