--- a/terminalcss.css
+++ b/terminalcss.css
@@ -23,7 +23,7 @@ div {
   /*color: #47F323;*/
   color: #ffffff;
   font-size: 1.75em;
-  font-style: 'ubuntumono';
+  font-family: 'ubuntumono';
   /*letter-spacing: 1px;*/
 }
 
