--- a/terminalcss.css
+++ b/terminalcss.css
@@ -18,8 +18,8 @@ div {
 }
 
 .light {
-  margin-top: 20px;
-  padding-left: 50px;
+  /*margin-top: 20px;
+  padding-left: 50px;*/
   /*color: #47F323;*/
   color: #ffffff;
   font-size: 1.75em;
